--- a/style.css
+++ b/style.css
@@ -13,15 +13,8 @@ body {
   position: relative;
 }
 
-.car {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 10%;
-}
-
 .car-size {
-  width: 100%;
+  width: 75px;
 }
 
 .rotate-left {
